--- a/templates/404.html
+++ b/templates/404.html
@@ -3,13 +3,9 @@
 {% block head_title %}
   404 - Page Not Found
 {% endblock head_title %}
-{% block head %}
-  <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
-{% endblock head %}
 {% block content %}
   <div class="justify-center">
-    <div class="lg:w-2/3 md:w-3/4 w-[98%] mx-auto p-5">
+    <div class="mx-auto p-5">
       <div class="flex flex-col items-center gap-8">
         <div class="w-full max-w-2xl rounded-2xl overflow-hidden bg-transparent"
              data-aos="fade-down"
@@ -30,14 +26,14 @@
                  data-aos="fade-up"
                  data-aos-delay="200"
                  data-aos-duration="800">
-              <span class="material-symbols-outlined text-green-500 text-2xl mb-2">travel_explore</span>
+              <span class="ph-fill ph-binoculars text-green-500 text-2xl mb-2"></span>
               <p class="text-neutral-300">Lost in the cryptic maze?</p>
             </div>
             <div class="p-4 bg-neutral-800/30 rounded-xl"
                  data-aos="fade-up"
                  data-aos-delay="300"
                  data-aos-duration="800">
-              <span class="material-symbols-outlined text-blue-500 text-2xl mb-2">lightbulb</span>
+              <span class="ph-fill ph-lightbulb text-blue-500 text-2xl mb-2"></span>
               <p class="text-neutral-300">Maybe it's another puzzle?</p>
             </div>
           </div>
@@ -46,8 +42,8 @@
                data-aos-delay="400"
                data-aos-duration="800">
             <button onclick="window.location.href='{% url 'index' %}'"
-                    class="bg-neutral-900/70 shadow-inset-white hover:bg-green-600 text-neutral-100 hover:text-neutral-50 font-bold py-3 px-6 rounded-full transition-all duration-300 flex items-center gap-2">
-              <span class="material-symbols-outlined">home</span>
+                    class="bg-neutral-900/70 shadow-inset-white hover:bg-green-600 text-neutral-100 hover:text-neutral-50 font-bold py-3 px-6 rounded-xl transition-all duration-300 flex items-center gap-2">
+              <span class="ph-bold ph-house"></span>
               Back to Home
             </button>
           </div>
