--- a/templates/500.html
+++ b/templates/500.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
-{% block head_title %}500 - Server Error{% endblock head_title %}
-{% block head %}
-  <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
-{% endblock head %}
+{% block head_title %}
+  500 - Server Error
+{% endblock head_title %}
 {% block content %}
   <div class="justify-center">
-    <div class="lg:w-2/3 md:w-3/4 w-[98%] mx-auto p-5">
+    <div class="mx-auto p-5">
       <div class="flex flex-col items-center gap-8">
         <div class="w-full max-w-2xl rounded-2xl overflow-hidden bg-transparent"
              data-aos="fade-down"
@@ -31,7 +29,7 @@
                data-aos-delay="200"
                data-aos-duration="800">
             <div class="p-4 bg-neutral-800/30 rounded-xl">
-              <span class="material-symbols-outlined text-amber-500 text-2xl mb-2">history</span>
+              <span class="ph-bold ph-clock-counter-clockwise text-amber-500 text-2xl mb-2"></span>
               <p class="text-neutral-300">Please try again later</p>
             </div>
           </div>
@@ -40,13 +38,13 @@
                data-aos-delay="300"
                data-aos-duration="800">
             <button onclick="window.location.href='{% url 'index' %}'"
-                    class="bg-neutral-900/70 shadow-inset-white hover:bg-green-600 text-neutral-100 hover:text-neutral-50 font-bold py-3 px-6 rounded-full transition-all duration-300 flex items-center gap-2">
-              <span class="material-symbols-outlined">home</span>
+                    class="bg-neutral-900/70 shadow-inset-white hover:bg-green-600 text-neutral-100 hover:text-neutral-50 font-bold py-3 px-6 rounded-xl transition-all duration-300 flex items-center gap-2">
+              <span class="ph-bold ph-house"></span>
               Back to Home
             </button>
             <button onclick="window.location.reload()"
-                    class="bg-neutral-900/70 shadow-inset-white hover:bg-green-600 text-neutral-100 hover:text-neutral-50 font-bold py-3 px-6 rounded-full transition-all duration-300 flex items-center gap-2">
-              <span class="material-symbols-outlined">refresh</span>
+                    class="bg-neutral-900/70 shadow-inset-white hover:bg-green-600 text-neutral-100 hover:text-neutral-50 font-bold py-3 px-6 rounded-xl transition-all duration-300 flex items-center gap-2">
+              <span class="ph-bold ph-arrow-counter-clockwise"></span>
               Try Again
             </button>
           </div>
