--- a/templates/banned.html
+++ b/templates/banned.html
@@ -1,12 +1,37 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load static %}
-{% block head_title %}Banned{% endblock %}
+{% block head_title %}
+    Account Suspended
+{% endblock head_title %}
 {% block content %}
-<div class="justify-center">
-    <div class="rounded lg:w-1/3  md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6"><span class="text-7xl">Banned</span>{% if reason %}<br><span>Reason: {{reason}}</span></i>{% endif %}
-    </p><hr class="mt-3 mb-3 border-green-600">
-        <div class=""><img src="{% static 'banned.svg' %}" alt="offline" class="max-h-[80vh]" style=""></img></div>
-        <span class="text-xs text-green-600"><i><a href="https://storyset.com/user" class="hover:text-white">User illustrations by Storyset</a></i></span>
-</div>
-</div>
+    <div class="min-h-[80vh] flex items-center justify-center px-4">
+        <div class="max-w-4xl mx-auto" data-aos="fade-up" data-aos-duration="800">
+            <div class="overflow-hidden">
+                <div class="p-8 md:p-10">
+                    <div class="text-center mb-8">
+                        <div class="transition-transform duration-300 hover:scale-[1.02] justify-center items-center flex">
+                            <img src="{% static 'banned.png' %}"
+                                 alt="Account Suspended"
+                                 class="md:w-1/3 w-1/2 rounded-xl"
+                                 width="auto"
+                                 height="auto">
+                        </div>
+                        <h1 class="text-5xl md:text-6xl font-black text-neutral-100 my-8">Account Suspended</h1>
+                        {% if reason %}
+                            <div class="inline-flex items-center gap-2 bg-red-600/20 px-6 py-3 rounded-full text-red-500 font-black flex-col">
+                                {{ reason }}
+                            </div>
+                        {% endif %}
+                    </div>
+                    <div class="mt-8 text-center">
+                        <a href="{% url 'index' %}"
+                           class="inline-flex items-center gap-2 bg-neutral-900/70 shadow-inset-white hover:bg-red-600 text-neutral-100 font-bold py-3 px-6 rounded-xl transition-all duration-300">
+                            <i class="ph-bold ph-house"></i>
+                            Return to Homepage
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
