--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,6 @@
               Inter: ["Inter"],
             },
             boxShadow: {
-              // inwards subtle white shadow to make it look neumorphic
               "inset-white": "inset 0 2px 0px -0.5px rgba(255, 255, 255, 0.1) ",
             },
           },
@@ -233,12 +232,43 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
+
+      /* Toast Animations */
+      @keyframes toastEnter {
+        0% {
+          transform: translateY(100%) scale(0.5);
+          opacity: 0;
+        }
+        100% {
+          transform: translateY(0) scale(1);
+          opacity: 1;
+        }
+      }
+
+      @keyframes toastExit {
+        0% {
+          transform: translateY(0) scale(1);
+          opacity: 1;
+        }
+
+        100% {
+            transform: translateY(100%) scale(0.5);
+          opacity: 0;
+        }
+      }
+
+      /* Classes to trigger animations */
+      .toast-enter {
+        animation: toastEnter 0.4s forwards ease-in-out;
+      }
+      .toast-exit {
+        animation: toastExit 0.3s forwards ease-in-out;
+      }
     </style>
     {% block head %}
     {% endblock head %}
   </head>
   <body class="font-Inter mt-24">
-    <!-- Container for stacking multiple toasts -->
     <div id="toast_container"
          class="fixed bottom-0 right-0 flex w-full flex-col items-center p-4 space-y-2 z-50"></div>
     <div class="static-bg">
@@ -257,25 +287,13 @@
       </svg>
     </div>
     {% if user.is_authenticated %}
-      {% include "auth_header.html" %}
+      {% include "components/auth_header.html" %}
     {% else %}
-      {% include "no_auth_header.html" %}
+      {% include "components/no_auth_header.html" %}
     {% endif %}
     <center>
       {% block content %}
       {% endblock content %}
-      <div id="custom_toast"
-           class="fixed bottom-0 text-sm rounded-2xl bg-neutral-900/70 backdrop-blur-xl shadow-inset-white text-neutral-100 flex items-center gap-2">
-        <svg xmlns="http://www.w3.org/2000/svg"
-             fill="none"
-             viewBox="0 0 24 24"
-             stroke-width="1.5"
-             stroke="currentColor"
-             class="w-6 h-6 text-amber-400">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z" />
-        </svg>
-        <span></span>
-      </div>
     </center>
     <script src="https://unpkg.com/flowbite@1.4.7/dist/flowbite.js"></script>
     {% if user.is_authenticated %}
@@ -315,7 +333,6 @@
       webpushr('attributes', { "username": "{{user.username}}" });
       {% endif %}
       </script>
-
       <script>
       const mobileMenuButton = document.getElementById("mobile-menu-button");
       const mobileMenu = document.getElementById("mobile-menu");
@@ -335,7 +352,6 @@
         }
       });
 
-      // Close menu when clicking outside
       document.addEventListener("click", (e) => {
         if (
           isOpen &&
@@ -350,7 +366,6 @@
       });
       </script>
       <script>
-      // Initialize AOS
       AOS.init({
         offset: 50,
         delay: 0,
@@ -370,7 +385,7 @@
           },
           INFO: {
             colorClass: "text-blue-400 border-none",
-            svg: `<svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="22px" fill="#60a5fa"><path d="M448.67-280h66.66v-240h-66.66v240Zm31.32-316q15.01 0 25.18-9.97 10.16-9.96 10.16-24.7 0-15.3-10.15-25.65-10.16-10.35-25.17-10.35-15.01 0-25.18 10.35-10.16 10.35-10.16 25.65 0 14.74 10.15 24.7 10.16 9.97 25.17 9.97Zm.19 516q-82.83 0-155.67-31.5-72.84-31.5-127.18-85.83Q143-251.67 111.5-324.56T80-480.33q0-82.88 31.5-155.78Q143-709 197.33-763q54.34-54 127.23-85.5T480.33-880q82.88 0 155.78 31.5Q709-817 763-763t85.5 127Q880-563 880-480.18q0 82.83-31.5 155.67Q817-251.67 763-197.46q-54 54.21-127 85.84Q563-80 480.18-80Z" /></svg>`,
+            svg: `<svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="22px" fill="#60a5fa"><path d="M448.67-280h66.66v-240h-66.66v240Zm31.32-316q15.01 0 25.18-9.97 10.16-9.96 10.16-24.7 0-15.3-10.15-25.65-10.16-10.35-25.17-10.35-15.01 0-25.18 10.35-10.16 10.35-10.16 25.65 0 14.74 10.15 24.7 10.16 9.97 25.17 9.97Zm.19 516q-82.83 0-155.67-31.5-72.84-31.5-127.18-85.83Q143-251.67 111.5-324.56T80-480.33q0-82.88 31.5-155.78Q143-709 197.33-763q54.34-54 127.23-85.5T480.33-880q82.88 0 155.78 31.5Q709-817 763-763t85.5 127Q880-563 880-480.18q0 82.83-31.5 155.67-31.5 73-85.5 127.34Q709-143 636-111.5T480-80Z" /></svg>`,
           },
           SUCCESS: {
             colorClass: "text-green-500 border-none",
@@ -401,18 +416,23 @@
           "py-2",
           "transition-all",
           "duration-500",
-          "justify-center"
+          "justify-center",
+          "toast-enter"
         );
         let variant = toastVariants[type] || toastVariants["INFO"];
         toast.classList.add(...variant.colorClass.split(" "));
-        toast.classList.add("border", "border-2"); // Since we want a border
+        toast.classList.add("border", "border-2"); 
         toast.innerHTML = `
             ${variant.svg}
           <span>${message}</span>
         `;
         container.appendChild(toast);
         setTimeout(() => {
-          toast.remove();
+          toast.classList.remove("toast-enter");
+          toast.classList.add("toast-exit");
+          toast.addEventListener("animationend", () => {
+            toast.remove();
+          });
         }, time);
       }
 
