--- a/templates/ended.html
+++ b/templates/ended.html
@@ -1,11 +1,33 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load static %}
-{% block head_title %}Event Ended{% endblock %}
-{% block content %}
-<div class="justify-center">
-    <div class="rounded lg:w-1/3 md:w-1/2 w-[98%] p-10 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10" style="background-color: rgba(0, 42, 42, .6);"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6"><span class="text-4xl">Thank You</span><br>
-        <span>The Event has ended succesfully</span></i><br><br><a href="{% url 'leaderboard' %}" class="text-green-600 hover:text-nblue-500 focus:outline-none text-l font-extrabold leading-6">Check out leaderboard</a></p></div>
-    </p>
 
+{% block head_title %}Event Ended{% endblock head_title %}
+
+{% block content %}
+<div class="min-h-[80vh] flex items-center justify-center px-4">
+  <div class="max-w-4xl mx-auto" data-aos="fade-up" data-aos-duration="800">
+    <div class="p-5 bg-clip-padding mx-auto mb-8">
+      <div class="flex flex-col items-center gap-4">
+        <div class="w-20 h-20 rounded-full bg-green-600/20 flex items-center justify-center">
+          <i class="ph-fill ph-flag-checkered text-4xl text-green-500"></i>
+        </div>
+        <h1 class="text-6xl font-black text-neutral-100">Thank You!</h1>
+        <p class="text-xl text-neutral-300 text-center">The event has ended successfully.</p>
+      </div>
+    </div>
+
+    <div class="transform transition duration-300 hover:scale-[1.01]"
+         data-aos="fade-up"
+         data-aos-delay="100"
+         data-aos-duration="800">
+      <div class="flex justify-center">
+        <a href="{% url 'leaderboard' %}" 
+           class="bg-neutral-900/70 shadow-inset-white hover:bg-green-600 text-neutral-100 hover:text-neutral-50 font-bold py-3 px-8 rounded-xl transition-all duration-300 flex items-center gap-2">
+          <i class="ph-fill ph-chart-line-up"></i>
+          View Leaderboard
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock content %}
