--- a/templates/privacy-policy.html
+++ b/templates/privacy-policy.html
@@ -1,53 +1,72 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load static %}
-{% block head_title %}Prviacy Policy{% endblock %}
+
+{% block head_title %} Privacy Policy {% endblock head_title %}
+
 {% block content %}
-<div class="rounded lg:w-1/2 md:w-1/2 w-[98%] p-5 mt-16 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 bg-color-green-600 border border-green-600 mb-10 text-green-600" style="background-color: rgba(0, 42, 42, .6);text-align: left;"><i><p tabindex="0" class="text-green-600 focus:outline-none text-2xl font-extrabold leading-6">
+<div class="min-h-[80vh] justify-center px-4 pb-8">
+  <div class="md:w-1/2 p-5 bg-clip-padding mx-auto"
+       data-aos="fade-up"
+       data-aos-duration="800">
+    <div class="flex flex-col items-center gap-4">
+      <div class="w-20 h-20 rounded-full bg-green-600/20 flex items-center justify-center">
+        <i class="ph-fill ph-shield text-4xl text-green-500"></i>
+      </div>
+      <h1 class="text-6xl font-black text-neutral-100">Privacy Policy</h1>
+    </div>
+  </div>
 
-    <h1>Privacy Policy for Re-Dcrypt</h1>
+  <div class="max-w-4xl mx-auto">
+    <div class="bg-neutral-900/70 backdrop-blur-md shadow-inset-white rounded-2xl p-8 space-y-6 transform transition duration-300 hover:scale-[1.01] text-left"
+         data-aos="fade-up"
+         data-aos-delay="100"
+         data-aos-duration="800">
+      
+      <div class="space-y-4">
+        <p class="text-neutral-300">At Re-Dcrypt, accessible from https://redcrypt.xyz/, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Re-Dcrypt and how we use it.</p>
 
-    <p>At Re-Dcrypt, accessible from https://redcrypt.xyz/, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Re-Dcrypt and how we use it.</p>
-    
-    <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
-    
-    <h2>Log Files</h2>
-    
-    <p>Re-Dcrypt follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information. Our Privacy Policy was created with the help of the <a href="https://www.privacypolicyonline.com/privacy-policy-generator/">Privacy Policy Generator</a>.</p>
-    
-    <h2>Cookies and Web Beacons</h2>
-    
-    <p>Like any other website, Re-Dcrypt uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.</p>
-    
-    <p>For more general information on cookies, please read <a href="https://www.privacypolicyonline.com/what-are-cookies/">the "Cookies" article from the Privacy Policy Generator</a>.</p>
-    
-    
-    
-    <h2>Privacy Policies</h2>
-    
-    <P>You may consult this list to find the Privacy Policy for each of the advertising partners of Re-Dcrypt.</p>
-    
-    <p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on Re-Dcrypt, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.</p>
-    
-    <p>Note that Re-Dcrypt has no access to or control over these cookies that are used by third-party advertisers.</p>
-    
-    <h2>Third Party Privacy Policies</h2>
-    
-    <p>Re-Dcrypt's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. </p>
-    
-    <p>You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites. What Are Cookies?</p>
-    
-    <h2>Children's Information</h2>
-    
-    <p>Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.</p>
-    
-    <p>Re-Dcrypt does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
-    
-    <h2>Online Privacy Policy Only</h2>
-    
-    <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in Re-Dcrypt. This policy is not applicable to any information collected offline or via channels other than this website.</p>
-    
-    <h2>Consent</h2>
-    
-    <p>By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.</p>
+        <p class="text-neutral-300">If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
+      </div>
+
+      <div class="space-y-2">
+        <h2 class="text-2xl font-bold text-green-500">Log Files</h2>
+        <p class="text-neutral-300">Re-Dcrypt follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.</p>
+      </div>
+
+      <div class="space-y-2">
+        <h2 class="text-2xl font-bold text-green-500">Cookies and Web Beacons</h2>
+        <p class="text-neutral-300">Like any other website, Re-Dcrypt uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.</p>
+      </div>
+
+      <div class="space-y-2">
+        <h2 class="text-2xl font-bold text-green-500">Privacy Policies</h2>
+        <div class="space-y-4 text-neutral-300">
+          <p>You may consult this list to find the Privacy Policy for each of the advertising partners of Re-Dcrypt.</p>
+          <p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on Re-Dcrypt, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.</p>
+          <p>Note that Re-Dcrypt has no access to or control over these cookies that are used by third-party advertisers.</p>
+        </div>
+      </div>
+
+      <div class="space-y-2">
+        <h2 class="text-2xl font-bold text-green-500">Children's Information</h2>
+        <div class="space-y-4 text-neutral-300">
+          <p>Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.</p>
+          <p>Re-Dcrypt does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
+        </div>
+      </div>
+
+      <div class="space-y-2">
+        <h2 class="text-2xl font-bold text-green-500">Consent</h2>
+        <p class="text-neutral-300">By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.</p>
+      </div>
+
+      <div class="pt-4 text-center border-t border-neutral-800">
+        <a href="https://www.privacypolicyonline.com/privacy-policy-generator/" 
+           class="text-sm text-neutral-500 hover:text-neutral-400 transition-colors">
+          Privacy Policy Generator
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock content %}
